src/test/deca/syntax/invalid/synt/overflow_negative_integer.deca
// @expected_output deca:8:13:
/*
    Description : Initialisation d'un int avec une valeur trop petite

    Résultat : OK
*/
{
    int x = -4500000000;
}
